syntax = "proto3";

package customer;

option java_package = "org.openvz.proto.customer";
option java_multiple_files = true;

message AddCustomerRequest {
  	string customerId = 1;
	string firstName = 2;
	string lastName = 3;
	string middleName = 4;
	int32  ssn = 5;
	string gender = 6;
	string occupation = 7;
	string status = 8;
}

message AddCustomerResponse {
	string responseCode = 1;
	string responseMessage = 2;
	int32 customerCode = 3;
	string customerId = 4;
	string firstName = 5;
	string lastName = 6;
	string middleName = 7;
	int32  ssn = 8;
	string gender = 9;
	string occupation = 10;
	string status = 11;
}

service AddCustomerService {
  // unary
  rpc addCustomer(AddCustomerRequest) returns (AddCustomerResponse) {};
  
  
  // server stream
  //rpc getAllDoubles(Input) returns (stream Output) {};
  // client stream
  //rpc sumAll(stream Input) returns (Output) {};
  // bi-directional stream
 // rpc playUpTo100(stream Input) returns (stream Output) {};
}